# armatron_software

./: .gitignore  LICENSE
controls/: CMakeLists.txt  main.cpp  main_debug.cpp  main_realtime.cpp
controls/include/: can_handler.hpp  motor.hpp  motor_defs.hpp  motor_interface.hpp  real_time_daemon.hpp  robot_interface.hpp  utils.hpp
controls/src/: can_handler.cpp  motor.cpp  motor_interface.cpp  real_time_daemon.cpp  robot_interface.cpp
resources/: README.md
web/: index.js  package-lock.json  package.json
web/public/: index.html  theme.css
web/server/src/: index.js
